@`posts/Human_ancestors_are_fish.md`: *Java* fish
@`posts/Human_ancestors_are_fish.md: +`#request-java-fish`, +`#solar-pro-2s-java-fish`, +`#request-to-release-java-fish-through-apache-2--gplv2`, +`#solar-pro-2-allows-to-release-java-fish-through-apache-2--gplv2`
This `commit` is followup to: commit HEAD~2 (+`posts/Human_ancestors_are_fish.md`). TODO: `squash`?