@@ -6,6 +6,8 @@
 - [Intro](#intro)
 - [*OpenGLES2* fish](#request-opengles2-fish)
   - [*OpenGLES2* fish released through *Apache 2* + *GPLv2*](#request-to-release-opengles2-fish-through-apache-2--gplv2)
+- [*Java* fish](#request-java-fish)
+  - [*Java* fish released through *Apache 2* + *GPLv2*](#request-to-release-java-fish-through-apache-2--gplv2)
 - [Synopsis](#synopsis)
 
 # Intro
@@ -271,6 +273,392 @@ class Fishes {
 > By following these steps, you'll have properly dual-licensed your code under both Apache License 2.0 and GPLv2. Remember to update the year and copyright holder information as needed in future releases.
 
 `[Year]` above is `2025`, `[Your Name or Organization]` is `https://github.com/SwuduSusuwu/ with assistance of https://poe.com/Grok-2`.
+
+******************************************
+
+# Request *Java* fish
+**Q**: "Wish that you produce *Java* source code for a fish sim"
+
+Result: simple [_Java_](https://www.java.com/en/download/help/whatis_java.html) [fish sim](#solar-pro-2s-java-fish) ([produced through _Solar-Pro-2_](https://poe.com/s/ehlOJYRJNsrGJttfJ4HK); [released through *Apache 2* + *GPLv2*](#request-to-release-java-fish-through-apache-2--gplv2)).
+
+******************************************
+
+Notices:
+* Use `:%s/, 0, 0, 0/, 0, 0/` if *Java* says "error: method rotate in class Transform cannot be applied to given types; ... actual and formal argument lists differ in length"
+* You must improve `applySeparation` (such as `:%s/ACCELERATION/ACCELERATION * 2/`, to enforce more room) so you can view individual fish.
+* Use `sudo apt install openjfx openjdk-25-jdk-headless` for the packages on *Ubuntu*.
+  * use `PATH_TO_FX=/usr/share/openjfx/lib/` to build on *Ubuntu*.
+
+******************************************
+
+## [*Solar-Pro-2*](https://poe.com/Solar-Pro-2)'s *Java* fish
+> Below is a complete Java source code for a simple 2D fish simulation using JavaFX. This simulation will have multiple fish that move around the screen, avoid walls, and follow basic flocking behavior (separation, alignment, cohesion).
+>
+> ### ✅ Features of this simulation:
+> - Multiple fish with simple shapes
+> - Basic flocking behavior (Boids algorithm simplified)
+> - Wall avoidance
+> - Random initial positions and velocities
+> - JavaFX for rendering and animation
+>
+> ---
+>
+> ## 📁 File: `FishSim.java`
+
+```java
+import javafx.animation.AnimationTimer;
+import javafx.application.Application;
+import javafx.scene.Scene;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
+import javafx.scene.layout.Pane;
+import javafx.scene.paint.Color;
+import javafx.scene.shape.Circle;
+import javafx.scene.shape.Polygon;
+import javafx.stage.Stage;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Random;
+
+public class FishSim extends Application {
+
+	private static final int WIDTH = 800;
+	private static final int HEIGHT = 600;
+	private static final int FISH_COUNT = 50;
+	private static final double SEPARATION_DISTANCE = 50;
+	private static final double ALIGNMENT_DISTANCE = 100;
+	private static final double COHESION_DISTANCE = 100;
+	private static final double MAX_SPEED = 3.0;
+	private static final double ACCELERATION = 0.1;
+
+	private List<Fish> fishList = new ArrayList<>();
+	private Random random = new Random();
+	private Pane root = new Pane();
+
+	public static void main(String[] args) {
+		launch(args);
+	}
+
+	@Override
+	public void start(Stage primaryStage) {
+		// Initialize fish
+		for (int i = 0; i < FISH_COUNT; i++) {
+			double x = random.nextDouble() * WIDTH;
+			double y = random.nextDouble() * HEIGHT;
+			double dx = (random.nextDouble() * 2 - 1) * MAX_SPEED;
+			double dy = (random.nextDouble() * 2 - 1) * MAX_SPEED;
+			fishList.add(new Fish(x, y, dx, dy));
+			root.getChildren().add(fishList.get(i).getShape());
+		}
+
+		Scene scene = new Scene(root, WIDTH, HEIGHT, Color.LIGHTBLUE);
+		primaryStage.setScene(scene);
+		primaryStage.setTitle("Fish Simulation (Boids)");
+		primaryStage.setResizable(false);
+		primaryStage.show();
+
+		// Start animation loop
+		new AnimationTimer() {
+			@Override
+			public void handle(long now) {
+				updateFish();
+			}
+		}.start();
+	}
+
+	private void updateFish() {
+		for (Fish fish : fishList) {
+			// Apply flocking rules
+			fish.applySeparation();
+			fish.applyAlignment();
+			fish.applyCohesion();
+			fish.applyWallAvoidance(WIDTH, HEIGHT);
+
+			// Update position and velocity
+			fish.update();
+		}
+	}
+
+	// Fish class representing each fish
+	private class Fish {
+		private double x, y;        // Position
+		private double dx, dy;      // Velocity
+		private double angle;       // Direction fish is facing
+		private Polygon shape;      // Visual representation
+
+		public Fish(double x, double y, double dx, double dy) {
+			this.x = x;
+			this.y = y;
+			this.dx = dx;
+			this.dy = dy;
+			this.angle = Math.atan2(dy, dx);
+			this.shape = createFishShape();
+		}
+
+		private Polygon createFishShape() {
+			Polygon fish = new Polygon(
+				0, -10,    // Top (head)
+				-5, 10,    // Left (tail)
+				-2, 0,     // Middle-left
+				2, 0,      // Middle-right
+				5, 10      // Right (tail)
+			);
+			fish.setFill(Color.ORANGERED);
+			fish.setTranslateX((int) x);
+			fish.setTranslateY((int) y);
+			fish.getTransforms().add(javafx.scene.transform.Rotate.rotate(Math.toDegrees(angle) + 90, 0, 0, 0));
+			return fish;
+		}
+
+		public void update() {
+			// Limit speed
+			double speed = Math.sqrt(dx * dx + dy * dy);
+			if (speed > MAX_SPEED) {
+				dx = (dx / speed) * MAX_SPEED;
+				dy = (dy / speed) * MAX_SPEED;
+			}
+
+			// Update position
+			x += dx;
+			y += dy;
+
+			// Update shape position and rotation
+			shape.setTranslateX(x);
+			shape.setTranslateY(y);
+			angle = Math.atan2(dy, dx);
+			shape.getTransforms().clear();
+			shape.getTransforms().add(javafx.scene.transform.Rotate.rotate(Math.toDegrees(angle) + 90, 0, 0, 0));
+		}
+
+		public void applySeparation() {
+			double sepX = 0, sepY = 0;
+			int count = 0;
+
+			for (Fish other : fishList) {
+				if (other != this) {
+					double dist = Math.hypot(x - other.x, y - other.y);
+					if (dist < SEPARATION_DISTANCE) {
+						double diffX = x - other.x;
+						double diffY = y - other.y;
+						sepX += diffX / dist;
+						sepY += diffY / dist;
+						count++;
+					}
+				}
+			}
+
+			if (count > 0) {
+				sepX /= count;
+				sepY /= count;
+
+				// Normalize and scale separation force
+				double sepLength = Math.sqrt(sepX * sepX + sepY * sepY);
+				if (sepLength > 0) {
+					sepX = (sepX / sepLength) * ACCELERATION;
+					sepY = (sepY / sepLength) * ACCELERATION;
+				}
+
+				dx += sepX;
+				dy += sepY;
+			}
+		}
+
+		public void applyAlignment() {
+			double avgDX = 0, avgDY = 0;
+			int count = 0;
+
+			for (Fish other : fishList) {
+				if (other != this) {
+					double dist = Math.hypot(x - other.x, y - other.y);
+					if (dist < ALIGNMENT_DISTANCE) {
+						avgDX += other.dx;
+						avgDY += other.dy;
+						count++;
+					}
+				}
+			}
+
+			if (count > 0) {
+				avgDX /= count;
+				avgDY /= count;
+
+				// Normalize and scale alignment force
+				double length = Math.sqrt(avgDX * avgDX + avgDY * avgDY);
+				if (length > 0) {
+					avgDX = (avgDX / length) * ACCELERATION;
+					avgDY = (avgDY / length) * ACCELERATION;
+				}
+
+				dx += avgDX;
+				dy += avgDY;
+			}
+		}
+
+		public void applyCohesion() {
+			double avgX = 0, avgY = 0;
+			int count = 0;
+
+			for (Fish other : fishList) {
+				if (other != this) {
+					double dist = Math.hypot(x - other.x, y - other.y);
+					if (dist < COHESION_DISTANCE) {
+						avgX += other.x;
+						avgY += other.y;
+						count++;
+					}
+				}
+			}
+
+			if (count > 0) {
+				avgX = (avgX / count) - x;
+				avgY = (avgY / count) - y;
+
+				// Normalize and scale cohesion force
+				double length = Math.sqrt(avgX * avgX + avgY * avgY);
+				if (length > 0) {
+					avgX = (avgX / length) * ACCELERATION;
+					avgY = (avgY / length) * ACCELERATION;
+				}
+
+				dx += avgX;
+				dy += avgY;
+			}
+		}
+
+		public void applyWallAvoidance(double width, double height) {
+			double avoidanceX = 0, avoidanceY = 0;
+
+			// Left wall
+			if (x < 20) {
+				avoidanceX += (20 - x) / 20 * ACCELERATION;
+			}
+			// Right wall
+			if (x > width - 20) {
+				avoidanceX -= (x - (width - 20)) / 20 * ACCELERATION;
+			}
+			// Top wall
+			if (y < 20) {
+				avoidanceY += (20 - y) / 20 * ACCELERATION;
+			}
+			// Bottom wall
+			if (y > height - 20) {
+				avoidanceY -= (y - (height - 20)) / 20 * ACCELERATION;
+			}
+
+			dx += avoidanceX;
+			dy += avoidanceY;
+		}
+
+		public Polygon getShape() {
+			return shape;
+		}
+	}
+}
+```
+
+> This completes the Java source code for the fish simulation. Let me provide a brief explanation of how the simulation works:
+>
+> ### 🔍 How the Simulation Works
+>
+> 1. **Fish Representation**:
+>    - Each fish is represented by a `Polygon` shape resembling a fish.
+>    - Each fish has a position `(x, y)` and velocity `(dx, dy)`.
+>
+> 2. **Flocking Behavior**:
+>    - **Separation**: Fish try to stay away from nearby fish to avoid crowding.
+>    - **Alignment**: Fish try to align their direction with nearby fish.
+>    - **Cohesion**: Fish try to move towards the average position of nearby fish.
+>    - These rules are based on the Boids algorithm.
+>
+> 3. **Wall Avoidance**:
+>    - Fish steer away from the edges of the screen to avoid going out of bounds.
+>
+> 4. **JavaFX Animation**:
+>    - The simulation runs in an `AnimationTimer` loop, updating fish positions and behaviors every frame.
+>    - The fish shapes are updated to reflect their new positions and directions.
+>
+> ### 🧪 How to Run the Simulation:
+> 1. Save the code in a file named `FishSim.java`.
+> 2. Compile it with:
+>   ```bash
+>   javac --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml FishSim.java
+>   ```
+>   (Make sure to replace `$PATH_TO_FX` with the actual path to your JavaFX SDK.)
+> 3. Run it with:
+>   ```bash
+>   java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml FishSim
+>   ```
+>
+> ### 🎯 Enhancements You Could Add:
+> - Add obstacles for fish to navigate around.
+> - Implement predator-prey dynamics with different types of fish.
+> - Add visual effects like trails or bubbles.
+> - Implement steering behaviors like obstacle avoidance or path following.
+>
+> Let me know if you'd like any of these enhancements or further modifications!
+
+******************************************
+
+## Request to release *Java* fish through *Apache 2* / *GPLv2*
+**Q**: "Am allowed to publish this as *Apache 2* / *GPLv2*?"
+### *Solar-Pro-2* allows to release *Java* fish through *Apache 2* / *GPLv2*
+> Absolutely! You are allowed to publish this Java fish simulation source code under either the **Apache License 2.0** or the **GNU General Public License v2.0 (GPLv2)**. Here’s what you need to know:
+>
+> ### ✅ Licensing Compatibility
+> - **Apache 2.0** and **GPLv2** are both open-source licenses, but they have key differences:
+>   - **Apache 2.0** is a permissive license, allowing proprietary derivatives.
+>   - **GPLv2** is copyleft, requiring derivatives to also be licensed under GPLv2 (or compatible licenses).
+> - The two licenses are **not directly compatible**—code under GPLv2 cannot be relicensed under Apache 2.0 without permission from all copyright holders. However, you can choose **one** of them for this code.
+>
+> ### ✅ Steps to Publish Under Your Chosen License
+> 1. **Choose One License** (either Apache 2.0 or GPLv2—**not both** unless you’re creating a dual-licensed project, which is more complex).
+> 2. **Add the License Text** to your project (typically in a file named `LICENSE` or `COPYING`).
+> 3. **Add a License Header** to the source file(s) if required by the license (Apache 2.0 recommends this, GPLv2 does not strictly require it but it’s good practice).
+>
+> ### 📄 Example License Headers
+> #### For Apache 2.0:
+> ```java
+> /*
+>  * Licensed under the Apache License, Version 2.0 (the "License");
+>  * you may not use this file except in compliance with the License.
+>  * You may obtain a copy of the License at
+>  *
+>  *     http://www.apache.org/licenses/LICENSE-2.0
+>  *
+>  * Unless required by applicable law or agreed to in writing, software
+>  * distributed under the License is distributed on an "AS IS" BASIS,
+>  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+>  * See the License for the specific language governing permissions and
+>  * limitations under the License.
+>  */
+> ```
+>
+> #### For GPLv2:
+> ```java
+> /*
+>  * FishSim.java
+>  *
+>  * This program is free software; you can redistribute it and/or modify
+>  * it under the terms of the GNU General Public License as published by
+>  * the Free Software Foundation; either version 2 of the License, or
+>  * (at your option) any later version.
+>  *
+>  * This program is distributed in the hope that it will be useful,
+>  * but WITHOUT ANY WARRANTY; without even the implied warranty of
+>  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+>  * GNU General Public License for more details.
+>  *
+>  * You should have received a copy of the GNU General Public License along
+>  * with this program; if not, write to the Free Software Foundation, Inc.,
+>  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+>  */
+> ```
+>
+> ### 📌 Recommendation
+> - If you want **maximum permissiveness** (e.g., for reuse in commercial/proprietary projects), choose **Apache 2.0**.
+> - If you want to **ensure all derivatives remain open-source**, choose **GPLv2**.
+>
+> Let me know if you’d like help drafting a full `LICENSE` file for either license!
 
 ******************************************
 
